--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -2,7 +2,8 @@
 display: flex;
 flex-direction: column;
 position: relative;
-width: auto;
+/* width: auto; */
+width: 720px;
 height: auto;
 background: #f1f1f1;
 margin: auto;
